# spooky_chess

./: .gitignore  Cargo.toml  MANIFEST.in  README.md  pyproject.toml  run_benchmark.fish  run_profile.fish  run_python_tests.fish  rust_chess.pyi  setup.py  spooky_chess.pyi
.cargo/: config.toml
.github/workflows/: lint.yml  publish.yml  test.yml  version-bump.yml
benches/: benchmarks.rs
examples/: analyse_pgn.py  analyse_pgn.rs
pgn/: fen_start.pgn  multi_game.pgn  promotion_no_equals.pgn  scholars_mate.pgn
pgn/annotated_games/: hartwig.pgn  immortal_games.pgn  perle.pgn
pgn/example/: annotated.pgn  castling_uppercase.pgn  castling_zero.pgn  draw.pgn  games.pgn  invalid_move.pgn  promotion_equals.pgn
pgn/lichess/: download.fish
src/: bitboard.rs  board.rs  color.rs  directions.rs  encode.rs  game.rs  lib.rs  limits.rs  move.rs  outcome.rs  pieces.rs  position.rs  serde_support.rs
src/game/: action.rs  check_pin.rs  make_move.rs  mod.rs  movegen.rs  state.rs  tests.rs  tests_10x10.rs  tests_6x6.rs  tests_8x8.rs  tests_actions.rs  tests_parametrised.rs  tests_san.rs  tests_standard.rs
src/pgn/: mod.rs  tests.rs
src/python/: dispatch.rs  mod.rs  py_board.rs  py_game.rs  py_move.rs  py_pgn.rs  py_piece.rs  py_position.rs  py_turn_state.rs  py_uci.rs
src/uci/: mod.rs  protocol.rs  tests.rs
tests/: test_edge_cases.py
tests/board/: test_board.py  test_custom_board_sizes.py
tests/comparison/: Cargo.toml  test_compare_with_python_chess.py  test_compare_with_python_chess_fuzz.py  test_compare_with_python_chess_performance.py  utilities.py
tests/comparison/src/: main.rs
tests/game/: test_castling_rights.py  test_game.py  test_game_fen.py  test_game_move_generation.py  test_game_sizes.py  test_game_states.py
tests/move/: test_move.py  test_move_lan.py
tests/piece/: test_piece.py
tests/position/: test_position.py
tests/uci/: test_uci.py
