[package]
name = "spooky_chess"
version = "0.4.1"
edition = "2021"
description = "Chess board game engine"
license = "MIT"
repository = "https://github.com/snowdrop4/spooky-chess"
include = ["src/**/*.rs", "benches/**/*.rs", "Cargo.toml", "README.md", "LICENSE.md"]

[lib]
name = "spooky_chess"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module"], optional = true }
bitflags = "2.4"
arrayvec = "0.7"
lazy_static = "1.4"
rand = "0.10.0"
paste = "1.0"
num_cpus = "1.16"
hotpath = { version = "0.13" }

[features]
default = []
python = ["pyo3"]
bench = []
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]
hotpath-mcp = ["hotpath/hotpath-mcp"]

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bin]]
name = "profile"
path = "src/bin/profile.rs"

[[bench]]
name = "benchmarks"
harness = false
required-features = ["bench"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
