[package]
name = "spooky_chess"
version = "0.8.0"
edition = "2024"
description = "Chess board game engine"
license = "MIT"
repository = "https://github.com/snowdrop4/spooky-chess"
include = ["src/**/*.rs", "benches/**/*.rs", "Cargo.toml", "README.md", "LICENSE.md"]

[lib]
name = "spooky_chess"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module"], optional = true }
bitflags = "2.11"
arrayvec = "0.7"
smallvec = "1.15"
paste = "1.0"
hotpath = "0.14"
tree-sitter = "0.26"
tree-sitter-pgn = "1.4.3"

[features]
default = []
python = ["pyo3"]
bench = []
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]
hotpath-mcp = ["hotpath/hotpath-mcp"]

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
rstest = "0.26"
rand = "0.10.0"

[dependencies.rand]
version = "0.10.0"
optional = true

[[bin]]
name = "profile_bitboard"
path = "src/bin/profile_bitboard.rs"
required-features = ["rand"]

[[bin]]
name = "profile_uci"
path = "src/bin/profile_uci.rs"
required-features = ["rand"]

[[bench]]
name = "benchmarks"
harness = false
required-features = ["bench"]

[lints.clippy]
unwrap_used = "deny"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
